Revendor forked image-spec for ImageConfig.ArgsEscaped
Replaces github.com/opencontainers/image-spec with a forked version that
adds Docker's non-standard ArgsEscaped extension to ImageConfig.

This field is used to properly support command lines for certain Windows
images.

Signed-off-by: Kevin Parsons <kevpar@microsoft.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -38,7 +38,7 @@ github.com/Microsoft/hcsshim 936eeeb286fd1197f107acfc4c3c82e4a9afc2c8
 github.com/modern-go/concurrent 1.0.3
 github.com/modern-go/reflect2 1.0.1
 github.com/opencontainers/go-digest c9281466c8b2f606084ac71339773efd177436e7
-github.com/opencontainers/image-spec v1.0.1
+github.com/opencontainers/image-spec deb02d24daef68ac4a88d8f9883ba03b75bdc187 https://github.com/kevpar/image-spec.git # fork
 github.com/opencontainers/runc 12f6a991201fdb8f82579582d5e00e28fba06d0a
 github.com/opencontainers/runtime-spec v1.0.2
 github.com/opencontainers/runtime-tools 1d69bd0f9c39677d0630e50664fbc3154ae61b88
