--- a/vendor.conf
+++ b/vendor.conf
@@ -73,7 +73,7 @@ google.golang.org/grpc v1.27.1
 gopkg.in/inf.v0 3887ee99ecf07df5b447e9b00d9c0b2adaa9f3e4
 gopkg.in/yaml.v2 v2.2.1
 k8s.io/api kubernetes-1.15.0-alpha.0
-k8s.io/cri-api v0.17.4
+k8s.io/cri-api v0.20.0-beta.2
 k8s.io/apimachinery kubernetes-1.15.0-alpha.0
 k8s.io/apiserver kubernetes-1.15.0-alpha.0
 k8s.io/client-go kubernetes-1.15.0-alpha.0
