--- a/vendor.conf
+++ b/vendor.conf
@@ -33,8 +33,8 @@ github.com/hashicorp/golang-lru v0.5.1
 github.com/json-iterator/go 1.1.5
 github.com/konsorten/go-windows-terminal-sequences v1.0.1
 github.com/matttproud/golang_protobuf_extensions v1.0.0
-github.com/Microsoft/go-winio v0.4.14
-github.com/Microsoft/hcsshim 936eeeb286fd1197f107acfc4c3c82e4a9afc2c8
+github.com/Microsoft/go-winio v0.4.16
+github.com/Microsoft/hcsshim v0.8.14
 github.com/modern-go/concurrent 1.0.3
 github.com/modern-go/reflect2 1.0.1
 github.com/opencontainers/go-digest c9281466c8b2f606084ac71339773efd177436e7
