--- a/vendor.conf
+++ b/vendor.conf
@@ -35,6 +35,7 @@ github.com/konsorten/go-windows-terminal-sequences v1.0.1
 github.com/matttproud/golang_protobuf_extensions v1.0.0
 github.com/Microsoft/go-winio v0.4.16
 github.com/Microsoft/hcsshim d082725f6fc43269dd4adf659a3cd72e989c9783
+github.com/moby/sys 74ec3fe1325a016151d353bb6654d960042f9e96
 github.com/modern-go/concurrent 1.0.3
 github.com/modern-go/reflect2 1.0.1
 github.com/opencontainers/go-digest c9281466c8b2f606084ac71339773efd177436e7
