Replace toml package with pelletier/go-toml
Signed-off-by: Kathryn Baldauf <kabaldau@microsoft.com>

--- a/vendor.conf
+++ b/vendor.conf
@@ -1,6 +1,5 @@
 github.com/beorn7/perks 4c0e84591b9aa9e6dcfdf3e020114cd81f89d5f9
 github.com/blang/semver v3.1.0
-github.com/BurntSushi/toml a368813c5e648fee92e5f6c30e3944ff9d5e8895
 github.com/containerd/cgroups v1.0.1
 github.com/containerd/console c12b1e7919c14469339a5d38f2f8ed9b64a9de23
 github.com/containerd/containerd 870a2e1c0c277796f692a1a096f9a8a396cfa11f https://github.com/kevpar/containerd.git # fork/release/1.4
@@ -45,6 +44,7 @@ github.com/opencontainers/runtime-spec v1.0.2
 github.com/opencontainers/runtime-tools 1d69bd0f9c39677d0630e50664fbc3154ae61b88
 github.com/opencontainers/selinux b6fa367ed7f534f9ba25391cc2d467085dbb445a
 github.com/pkg/errors v0.9.1
+github.com/pelletier/go-toml v1.8.1
 github.com/pmezard/go-difflib v1.0.0
 github.com/prometheus/client_golang f4fb1b73fb099f396a7f0036bf86aa8def4ed823
 github.com/prometheus/client_model 99fa1f4be8e564e8a6b613da7fa6f46c9edafc6c
